--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,11 @@ html, body{
 body{
     font-family: quicksand;
 }
+
+
+/* ==================================
+NAVIGATION
+=============================================================*/
 header{
     width: 100%;
     height: 100vh;
@@ -24,9 +29,14 @@ header{
     font-weight: bold;
     font-size: 24px;
 }
+.logo-title{
+    color:cyan;
+    font-style: italic  ;
+}
 nav{
     position: fixed;
     width: 100%;
+    background: #000;
 }
 nav ul{
     list-style: none;
@@ -39,17 +49,18 @@ nav ul{
     transition: 1s;
 }
 
-nav.black ul{
-    background: #000;
-}
 nav ul li{
     display: inline-block;
     padding: 20px;
 }
 nav ul li a{
     text-decoration: none;
-    color: #fff;
+    color: cyan;
     font-size: 20px;
+    transition: .5s;
+}
+nav ul li a:hover{
+    color: orange;
 }
 .menu-icon{
     width: 100%;
@@ -57,11 +68,19 @@ nav ul li a{
     text-align: right;
     box-sizing: border-box;
     padding: 15px 24px;
-    /* cursor: pointer; */
     display: none;
     color: white;
 
 }
+
+
+
+
+
+
+
+
+
 
 
 
@@ -77,11 +96,7 @@ MEDIA QUERY
     }
 
     nav ul{
-        max-height: 0;
-        background: #000;
-    }
-
-    nav.black ul{
+        /* max-height: 0; */
         background: #000;
     }
 
@@ -95,6 +110,7 @@ MEDIA QUERY
         padding: 24 0;
         text-align: center;
     } 
+
     .menu-icon{
         display: block;
     }
