--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ header{
     background: url(../images/KL.jpg) no-repeat 50% 50%;
     background-size: cover;
 }
-.content{
+.container{
     width: 90%;
     margin: 4em auto;
     text-align: justify;
@@ -46,7 +46,6 @@ nav ul{
     padding: 0;
     text-align: center;
     margin: 0;
-    transition: 1s;
 }
 
 nav ul li{
@@ -73,9 +72,26 @@ nav ul li a:hover{
 
 }
 
+/* ==================================
+WHO WE ARE
+=====================================================*/
+.who-we-are-header{
+    text-align: center;
+}
+.who-we-are-content{
+    display: flex;
+}
+.who-we-are-img>img{
+    width: 100%;
+}
+.who-we-are-text>p{
+    text-align: center;
+    padding: 60px 20px 20px 20px;
+}
 
-
-
+/* =================================
+NEW ARRIVALS
+==========================================================*/
 
 
 
@@ -114,4 +130,5 @@ MEDIA QUERY
     .menu-icon{
         display: block;
     }
+
 }
