--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,12 @@ header{
     background: url(../images/54.jpg) no-repeat 50% 50%;
     background-size: cover;
 }
+.header-product{
+    width: 100%;
+    height: 100vh;
+    background: url(../images/img-100.jpg) no-repeat 50% 50%;
+    background-size: cover;
+}
 .container{
     width: 90%;
     margin: 4em auto;
@@ -207,6 +213,12 @@ ABOUT US
     justify-content: space-between;
     text-align: center;
 }
+
+/* =====================================
+PRODUCT 
+====================================================*/
+
+
 
 
 /* ==================================
