--- a/css/styles.css
+++ b/css/styles.css
@@ -239,6 +239,10 @@ PRODUCT
 .product-services-img-1:hover{
     box-shadow: 2px 2px 2px #000;
 }
+.amount{
+    font-size: 24px;
+    font-style: italic;
+}
 
 /* ==============================================
 Contact
@@ -253,7 +257,53 @@ Contact
     text-align: center;
     font-size: 24px;
 }
-.form-group{}
+.label{
+    padding: 20px;
+}
+.form-group{
+    margin-top: 20px;
+}
+.input-form{
+    padding: 10px;
+    border-radius: 10px;
+    width: 300px;
+    box-sizing: none;
+    outline: transparent;
+    box-shadow: none;
+}
+
+.input-form-1{
+    margin-top: 20px;
+    margin-left: 40px;
+    padding: 10px;
+    border-radius: 10px;
+    width: 300px;
+    box-sizing: none;
+    outline: transparent;
+    box-shadow: none;
+}
+.input-form-2{
+    margin-top: 20px;
+    margin-left: 28px;
+    padding: 10px;
+    border-radius: 10px;
+    width: 300px;
+    box-sizing: none;
+    outline: transparent;
+    box-shadow: none;
+}
+.contact-button{
+    padding: 10px;
+    margin-top: 20px;
+    margin-left: 20px;
+    width: 100px;
+    border-radius: 10px;
+    box-sizing: none;
+    outline: none;
+    box-shadow: none;
+    background-color: #000;
+    color: cyan;
+}
 
 /* ==============================================
 MEDIA QUERY
